Webpages worden nu ook automatisch gescraped zodat deze meegenomen kunnen worden in motivatie brieven. Cleanup door Agent gedaan.

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,8 @@ token.json
 *_token.json
 
 # --- Email data (contains personal info) ---
-Email/**/*.json
-Email/Processing/
+Email/
+
 
 # --- Generated job lists (can be regenerated) ---
 all_jobs_list.json
