--- a/config/fetch_emails_config.json
+++ b/config/fetch_emails_config.json
@@ -1,4 +1,4 @@
 {
-  "cutoff_date": "2025/11/19",
-  "last_run": null
+  "cutoff_date": "2025/12/01",
+  "last_run": "2025-12-01T19:32:01.844575"
 }
